# tbpore

./: .config.yaml  .flake8  .gitignore  CHANGELOG.md  README.md  cog.toml  config.yaml  environment.yaml  justfile  pyproject.toml
.github/workflows/: ci.yaml  release-please.yaml  release-pypi.yaml  release.yaml
data/H37RV_genome/: compass-mask.bed  h37rv.fa.gz.gzi
external_scripts/: apply_filters.py  consensus.py  filter_contamination.py
pipelines/snakemake/: Snakefile  config.yaml  requirements.txt  submit_lsf.sh
pipelines/snakemake/envs/: psdm.yaml
pipelines/snakemake/scripts/: compare_H2H_and_tbpore_bcfs.py  compare_H2H_and_tbpore_consensus.py  compare_H2H_and_tbpore_mykrobe.py  compare_kept_reads.py
scripts/: run_sample_example.sh
tbpore/: __init__.py  __main__.py  cli.py  clustering.py  constants.py  external_tools.py  tbpore.py  utils.py
tests/: test_clustering.py  test_external_tools.py  test_tbpore.py  test_tbpore_cluster.py  test_tbpore_process.py  test_utils.py
tests/data/psdm_matrix/: psdm.matrix.csv  sample_asymmetrix.csv  sample_diagonal_is_not_zero.csv
tests/helpers/: run_test.py
tmp/toy/: a.fastq
