[tool.poetry]
name = "tbpore"
version = "0.5.0"
description = "Mycobacterium tuberculosis genomic analysis from Nanopore sequencing data"
authors = ["Michael Hall <michael@mbh.sh>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/mbhall88/tbpore"
repository = "https://github.com/mbhall88/tbpore"
keywords = ["tuberculosis", "nanopore", "diagnostics", "genomics", "variant-calling", "resistance-prediction"]
include = [
    "CHANGELOG.md",
    ".config.yaml",
    "external_scripts/*.py",
    "data/decontamination_db/remove_contam.tsv.gz",
    "data/H37RV_genome/h37rv.fa.gz*",
    "data/H37RV_genome/compass-mask.bed"
]

[tool.poetry.scripts]
tbpore = 'tbpore.tbpore:main'

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
click = "^8.0.3"
cyvcf2 = "^0.30"
loguru = "^0.5.3"
pyyaml = ">=6.0"
pandas = "^1.4.2"
pysam = "^0.17"
networkx = "^2.8"

[tool.poetry.dev-dependencies]
black = ">=22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
snakemake = "^7.6.2"
dictdiffer = "^0.9.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
